--- a/css/bibliotheque.css
+++ b/css/bibliotheque.css
@@ -1,3 +1,11 @@
+* {
+    font-family: "Fredoka", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: 300;
+    font-variation-settings: "wdth" 100;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -59,19 +67,59 @@ section  {
     background-color: white;
 }
 
-.container {
+#container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    max-width: 900px;
+}
+
+.containerDescription {
+    flex-direction: row;
+}
+
+#description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-top: solid #809848 2px;
+    max-width: 350px;
+}
+
+#imgdesc {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 352px;
+    justify-content: center;
 }
-img {
-    margin: 30px;
+
+.imageContainer {
     display: flex;
-    width: 350px;
+    align-items: center;
+    justify-content: center;
     height: 350px;
-    border: solid #442220 2px;
-    background-color:  #b5dead;
+    width: 350px;
+    margin:30px;
+}
+
+h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: solid #809848 2px;
+    padding: 10px;
+    width: 90%;
+}
+
+img {
+    max-width: 350px;
+}
+
+.lienImage {
+    text-decoration: none;
+    color: black;
 }
 
 footer {
