Formulaire fonctionnel avec ajout d'image et page connexion et gestion des utilisateurs

--- a/css/form.css
+++ b/css/form.css
@@ -15,7 +15,7 @@
     width: 100%;
 }
 
-input[type=text], input[type=file] {
+input[type=text], input[type=file], input[type=password] {
     display: flex;
     justify-content: flex-start;
     align-items: start;
