mise en place du panier et de la modification des informations de contact. Résolution bug modification jeu

--- a/css/bibliotheque.css
+++ b/css/bibliotheque.css
@@ -1,5 +1,6 @@
 @import url("form.css");
 @import url("description.css");
+@import url("panier.css");
 @import url("index.css");
 @import url("insertion.css");
 
@@ -97,6 +98,10 @@ b {
         height: 200px;
     }
 
+    .widthAuto {
+        width: auto;
+    }
+    
     .widthFull {
         width: 100%;
     }
