--- a/css/actualite.css
+++ b/css/actualite.css
@@ -1,88 +1,76 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
+  .slider-wrapper {
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .slides-container {
+    width: 100%;
+    display: flex;
+    overflow: scroll;
+    scroll-behavior: smooth;
+    list-style: none;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-}
-
-.carousel-container {
-    max-width: 80%;
-    margin: 50px auto;
-    overflow: hidden;
-    position: relative;
-}
-
-.carousel-wrapper {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-}
-
-.carousel-item {
-    min-width: 300px;
-    margin-right: 20px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-}
-
-.carousel-item img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-
-.carousel-details {
-    padding: 15px;
-    text-align: center;
-}
-
-.carousel-details h3 {
-    margin: 0;
-    font-size: 1.5em;
-    color: #333;
-}
-
-.carousel-details p {
-    margin: 10px 0;
-    color: #777;
-}
-
-.game-info {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    font-size: 0.9em;
-}
-
-.game-info span {
-    background-color: #e7e7e7;
-    padding: 5px 10px;
-    border-radius: 5px;
-}
-
-.prev, .next {
+  }
+  
+  .slide-arrow {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    padding: 10px;
-    border-radius: 50%;
-    cursor: pointer;
+    display: flex;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    height: 4rem;
+    background-color: white;
     border: none;
-    font-size: 18px;
-    z-index: 10;
+    width: 2rem;
+    font-size: 3rem;
+    padding: 0;
+    cursor: pointer;
+    opacity: 0.5;
+    transition: opacity 100ms;
+  }
+  
+  .slide-arrow:hover,
+  .slide-arrow:focus {
+    opacity: 1;
+  }
+  
+  #slide-arrow-prev {
+    left: 0;
+    padding-left: 0.25rem;
+    border-radius: 0 2rem 2rem 0;
+  }
+  
+  #slide-arrow-next {
+    right: 0;
+    padding-left: 0.75rem;
+    border-radius: 2rem 0 0 2rem;
+  }
+  
+  .slide {
+    width: 100%;
+    height: 100%;
+    flex: 1 0 100%;
+  }
+  
+  ul > section {
+    margin-left: 20px;
+    margin-bottom: 20px;
+    height: 650px;
+  }
+
+ul > section > figurecaption {
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 10px;
+    border-top: solid var(--precis) 2px;
+    max-width: 350px; 
+    height: 70px;
 }
 
-.prev {
-    left: 10px;
-}
-
-.next {
-    right: 10px;
+ul > section > section > figurecaption {
+    border-bottom: solid var(--precis) 2px;
+    padding: 20px;
+    margin: 10px;
 }
