--- a/css/index.css
+++ b/css/index.css
@@ -1,37 +1,57 @@
-#jeuxContainer {
-    max-width: 1300px;
-}
-
-#jeuxContainer > section {
-    margin-left: 20px;
-    margin-bottom: 20px;
-    height: 650px;
-}
-
-#jeuxContainer > section > figurecaption {
-    margin-left: 10px;
-    margin-right: 10px;
-    padding: 10px;
-    border-top: solid var(--precis) 2px;
-    max-width: 350px;
-    height: 70px;
-}
-
-#jeuxContainer > section > section > figurecaption {
-    border-bottom: solid var(--precis) 2px;
-    padding: 20px;
-    margin: 10px;
-}
-
-#presentationTexte {
-    padding: 10px;
-    border-top: solid var(--precis) 2px;
-    max-width: 350px;
-    height: 70px;
-}
-
-#filterContainer {
-    height: 450px;
-    padding: 20px;
-    margin-top: 82px;
-}
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .text {font-size: 11px}
+  }
