--- a/css/bibliotheque.css
+++ b/css/bibliotheque.css
@@ -5,6 +5,8 @@
 @import url("insertion.css");
 @import url("actualite.css");
 @import url("index.css");
+@import url("footer.css");
+@import url("burgerMenu.css");
 
 * {
     --general: rgb(59, 46, 98);
@@ -253,3 +255,32 @@ b {
         color: white;
     }
 /* FIN CSS CODE COMMUN */
+
+@media only screen and (max-width: 990px) {
+
+    header {
+        border-bottom: solid 2px var(--precis);
+    }
+
+    header > section {
+        display: none !important;
+    }
+
+    .widthTexte {
+        width: auto;
+    }
+
+    .mySlides {
+        width: auto;
+        height: auto;
+    }
+
+    iframe {
+        width: 300px;
+        height: 300px;
+    }
+
+    textarea {
+        width: 300px;
+    }
+}
