--- a/css/description.css
+++ b/css/description.css
@@ -26,3 +26,21 @@
     padding: 20px;
     margin: 10px;
 }
+
+
+@media only screen and (max-width: 850px) {
+
+    .descriptionImage {
+        width: 300px;
+        height: 300px;
+    }
+
+    #descriptionContainer > section {
+        width: 350px;
+        margin: 50px;
+    }
+
+    nav {
+        display: none !important;
+    }
+}
