--- a/css/jeux.css
+++ b/css/jeux.css
@@ -35,3 +35,19 @@
     padding: 20px;
     margin-top: 82px;
 }
+
+@media only screen and (max-width: 990px) {
+
+    #jeuxContainer > section {
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        height: 650px;
+        width: 350px;
+    }
+
+    #jeuxContainer > section > figurecaption {
+        max-width: 300px;
+    }
+
+}
