--- a/css/bibliotheque.css
+++ b/css/bibliotheque.css
@@ -7,6 +7,7 @@
 @import url("index.css");
 @import url("footer.css");
 @import url("burgerMenu.css");
+@import url("contact.css");
 
 * {
     --general: rgb(59, 46, 98);
@@ -269,6 +270,8 @@ b {
     .widthTexte {
         width: auto;
     }
+
+
 
     .mySlides {
         width: auto;
