--- a/css/jeux.css
+++ b/css/jeux.css
@@ -36,6 +36,10 @@
     margin-top: 82px;
 }
 
+#jeuxEtRechercheContainer {
+    width: 70%;
+}
+
 @media only screen and (max-width: 990px) {
 
     #jeuxContainer > section {
