--- a/css/index.css
+++ b/css/index.css
@@ -8,13 +8,20 @@
     from {opacity: .4} 
     to {opacity: 1}
   }
-  
-  /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
-    .text {font-size: 11px}
-  }
 
   .mySlides {
     width: 800px;
     height: 700px;
   }
+
+@media only screen and (max-width: 1420px) {
+
+  #accueil {
+    margin: 0;
+  }
+
+    .mySlides {
+      width: 350px;
+      height: 400px;
+    }
+}
