--- a/css/jeux.css
+++ b/css/jeux.css
@@ -40,7 +40,11 @@
     width: 70%;
 }
 
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 1420px) {
+    
+    #jeuxEtRechercheContainer {
+        width: auto;
+    }
 
     #jeuxContainer > section {
         margin-left: 10px;
