--- a/css/insertion.css
+++ b/css/insertion.css
@@ -6,3 +6,8 @@
     width: 25%;
     margin: 30px;
 }
+@media only screen and (max-width: 1420px) {
+    #insertionContainer {
+        width: 100%;
+    }
+}
