--- a/css/panier.css
+++ b/css/panier.css
@@ -23,3 +23,10 @@
     padding: 20px;
     margin: 10px;
 }
+
+@media only screen and (max-width: 1420px) {
+
+    #panierContainer > section {
+        margin-left: 0;
+    }
+}
